app/assets/stylesheets/style.css.scss
body {
    margin: 0 auto;
    line-height: 1.7em;
}

.l-box {
    padding: 1em;
}

.header {
    margin: 0 0;
}

    .header .pure-menu {
        padding: 0.5em;
        .pure-menu-heading{
          font-family: 'Audiowide', cursive;
          font-size: 30px;
        }
    }

        .header .pure-menu li a:hover {
            background: none;
            border: none;
            color: #aaa;
        }

body .primary-button {
    background: #02a6eb;
    color: #fff;
}

.splash {
    margin: 2em auto 0;
    padding: 3em 0.5em;
    background: #eee;
}
    .splash .splash-head {
        font-size: 300%;
        margin: 0em 0;
        line-height: 1.2em;
        font-family: 'Patua One', Georgia, Cambria, serif;
        color: rgb(255, 255, 255);
    }
    .splash .splash-subhead {
        color: rgb(206,206,206);
        font-weight: 300;
        line-height: 1.4em;
    }
    .splash .primary-button {
        font-size: 150%;
    }


.content .content-subhead {
    color: rgb(206,206,206);
    padding-bottom: 0.3em;
    text-transform: uppercase;
    margin: 0;
    border-bottom: 2px solid #eee;
    display: inline-block;
}

.content .content-ribbon {
    margin: 3em;
    border-bottom: 1px solid #eee;
}

.ribbon {
    background: #eee;
    text-align: center;
    padding: 2em;
    color: #999;
}
    .ribbon h2 {
        display: inline;
        font-weight: normal;
    }

.footer {
    background: #111;
    color: #666;
    text-align: center;
    padding: 1em;
    font-size: 80%;
}

    .pure-u-2-3 {
    width: 100% !important;
    }
    .splash-text{
    background-color: rgba(0, 0, 0, 0.66);
    text-align: left;
    min-height: 120px;
    position: relative;

    }
    .splash-head a{
    text-decoration: none;
    color: #fff;
    }
    .post-cover-1{

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    text-align: center;
    /*padding: 50px;*/
     background-size: cover;    background-position: center;    background-repeat: no-repeat;
margin: 0px 0 10px 0;
     }

    .post-cover-2{
    }

time {
color: rgb(180, 180, 180);
}

.entry-content{
  max-width: 960px;
  margin: 0 auto;
}

.entry-date{
  color: rgb(255,255,255);
  font-family: 'Patua One', Georgia, Cambria, serif;
}

.entry-share{
  margin: 20px 0;
}

